# Virtuoso-Flow-Plugin

./: .gitattributes  .gitignore  AGENTS.md  README.md  project.md
.claude/skills/vfp/: SKILL.md
docs/: HANDOFF.md  architecture.md  development_notes.md  extension_api.md  layout_l1_plan.md  layout_l3_plan.md  plugin_usage.md
examples/folded_cascode_opa/: README.md
examples/rfc_classab_opa/: README.md  constraints.json  constraints.yaml  sample_context.json  sample_proposal.json  sample_result.json
schemas/: README.md  context.schema.json  job.schema.json  layout_primitive.schema.json  proposal.schema.json  result.schema.json  transaction.schema.json
scripts/: cellview_spectre_job.py  delegated_netlist.py  load_vfp.il  real_spectre_job.py  vfp  vfp_event_client.py
skill/: vfp_ade.il  vfp_connectivity.il  vfp_context.il  vfp_daemon_boot.il  vfp_dashboard.il  vfp_init.il  vfp_layout.il  vfp_layout_prim.il  vfp_layout_route.il  vfp_layout_txn.il  vfp_menu.il  vfp_netlist.il  vfp_proposal.il  vfp_rpc_client.il  vfp_rpc_server.il  vfp_schematic.il  vfp_sim.il  vfp_transaction.il  vfp_utils.il
tests/: README.md  test_agent_tools.py  test_constraints.py  test_context.py  test_daemon_cli.py  test_delegated_netlist.py  test_delegated_routing.py  test_e2e_agent_loop.py  test_errors.py  test_event.py  test_event_client.py  test_extension.py  test_m10_f2.py  test_m10_f3.py  test_m10_io.py  test_m10_session_fp.py  test_m10b_wrapper.py  test_netlist_requests.py  test_proposal.py  test_result.py  test_run.py  test_runner.py  test_schemas.py  test_session_m8.py  test_skillrpc.py  test_transaction.py  test_txn_audit.py  test_virtuoso_daemon.py
tests/fixtures/: fake_spectre.py  fake_spectre_psf.py
tunnel/: README.md  pyproject.toml
tunnel/vfp_tunnel/: __init__.py  cli.py  config.py  daemon.py  skillrpc.py
tunnel/vfp_tunnel/agent/: README.md  __init__.py  mcp_server.py  tools.py
tunnel/vfp_tunnel/artifact/: __init__.py  manager.py
tunnel/vfp_tunnel/constraints/: __init__.py  engine.py
tunnel/vfp_tunnel/design/: __init__.py  context.py
tunnel/vfp_tunnel/event/: __init__.py  manager.py
tunnel/vfp_tunnel/extension/: __init__.py  registry.py
tunnel/vfp_tunnel/proposal/: __init__.py  manager.py  model.py  policy.py
tunnel/vfp_tunnel/rpc/: __init__.py  errors.py
tunnel/vfp_tunnel/session/: __init__.py  registry.py
tunnel/vfp_tunnel/sim/: __init__.py  manager.py  metrics.py  netlist_requests.py  parser.py  runner.py  virtuoso_daemon.py
tunnel/vfp_tunnel/transaction/: __init__.py  manager.py  model.py  permissions.py
